<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lean Angle Sensor</string>
    <string name="title">MOTORCYCLE LEAN</string>
    <string name="subtitle">Phone IMU monitor</string>
    <string name="max_left">LEFT MAX\n0.0°</string>
    <string name="max_right">RIGHT MAX\n0.0°</string>
    <string name="calibrate">Calibrate Upright</string>
    <string name="start_ride">Start Ride</string>
    <string name="stop_ride">Stop Ride</string>
    <string name="reset_maximums">Reset Maximums</string>
</resources>
